--- a/style.css
+++ b/style.css
@@ -280,7 +280,10 @@ ul li {
 }
 .icons {
   display: flex;
+  align-items: center;
+  justify-content: center;
   gap: 20px;
+  padding-bottom: 35px;
 }
 .menu-icon i {
   font-size: 40px;
@@ -324,6 +327,16 @@ ul li {
   .mail-text button {
     width: 100%;
   }
+  .services-text h2 {
+    font-size: 24px;
+  }
+  .services-text button {
+    width: 100%;
+  }
+  .services{
+    flex-direction: column-reverse;
+
+  }
 }
 
 @media (max-width: 320px) {
@@ -333,6 +346,25 @@ ul li {
   .hero-text button {
     width: 100%;
   }
+  .footer-text{
+    font-size: 18px;
+  }
+  .team-members {
+margin-bottom: 40px;
+  }
+  .member_1{
+margin-bottom: 40px;
+
+  }
+  .member_2{
+    margin-bottom: 40px;
+    
+      }
+      .member_3{
+        margin-bottom: 40px;
+        
+          }
+           
 }
 
 @media (max-width: 933px) {
@@ -346,10 +378,46 @@ ul li {
   .gallery button {
     width: 100%;
   }
+  .member_1{
+    margin-bottom: 10px;
+    margin-right: 30px;
+  }
+  .member_2{
+    margin-bottom: 10px;
+    margin-right: 30px;
+  }
+  .member_3{
+    margin-bottom: 10px;
+    margin-right: 30px;
+  }
+  .member_4{
+    margin-bottom: 10px;
+    margin-right: 30px;
+  }
 }
 
 @media (max-width: 768px) {
   .mail img {
     max-width: 100%;
+  }
+  .services img{
+    max-width: 100%;
+
+  }
+  .member_1{
+    margin-bottom: 10px;
+    margin-right: 30px;
+  }
+  .member_2{
+    margin-bottom: 10px;
+    margin-right: 30px;
+  }
+  .member_3{
+    margin-bottom: 10px;
+    margin-right: 30px;
+  }
+  .member_4{
+    margin-bottom: 10px;
+    margin-right: 30px;
   }
 }
